--- a/exercice1.html
+++ b/exercice1.html
@@ -11,7 +11,9 @@
 
         </ul>
     </div>
-
+    <input type="text" id="input">
+    <button id="button1">Supprimer</button>
+    <button id="button2">Ajouter</button>
     <script type="text/javascript" src="exercice1.js"></script>
 </body>
 </html>
